  * Update powerpc's copy of documentation for copying ISO file on USB keys.
  * Add software speech synthesis documentation.
  * Document SCSI partition raise to 255. Closes: Bug#644734. Thanks David
    Prévot.
  * Do not make users think that only "Graphical install" has speakup support,
    and not "64 bit graphical install" too.
  * Mention the 64bit variant installation options.

  [ Joey Hess ]
  * Fix typo in example preseed. Closes: #612631

  [ Didier Raboud ]
  * Document win32-loader as a possible boot method. Closes: #444017.

  [ Colin Watson ]
  * The text frontend is available on most default install media.  Adjust
    the Boot Parameters section to say so.
  * Update url-us-keymap.  Thanks, Manfred Hampl; LP: #741134.
  * Document log_host and log_port.

  [ Christian Perrier ]
  * Document preseed-md5 and keymap preseed aliases
    Closes: #621825, #621824
  * Add VCS-Browser to debian/control. Closes: #636937

  [ Martin Michlmayr ]
  * Update list of supported ARM devices.

  [ Miguel Figueiredo ]
  * Fix chroot install keyboard configuration. Closes: #634168.

  [ Julian Andres Klode ]
  * Use C.UTF-8 locale for chroot install. Closes: #634167.

  [ Joey Hess ]
  * Remove dead link to Phoenix large disk BIOS faq. Closes: #638268
  * Add a pointer to the unofficial non-free CDs with firmware.

 -- Samuel Thibault <sthibault@debian.org>  Sat, 08 Oct 2011 17:36:51 +0200

installation-guide (20110122) unstable; urgency=low

  [ Frans Pop ]
  * List myself as one of the main authors in the administrativa appendix.
  * Clarify IP addresses in example for booting SS4000-E (arm). Thanks to
    Miroslav Kure for the patch.
  * Add link to boot screen section in accessibility section. Closes: #579954.

  [ Martin Michlmayr ]
  * Update links for ARM images.

  [ Samuel Thibault ]
  * Update brltty version.
  * Document booting from DOS (Closes: Bug#518808).
  * Add non-Linux infrastructure to the build system.
  * Add kFreeBSD infrastructure.