@@ -524,8 +524,8 @@ can use <command>aptitude</command> inside your &debian; chroot to do so.
 Check <userinput>info grub</userinput> <phrase arch="x86">or <userinput>man
 lilo.conf</userinput></phrase> for instructions on setting up the
 bootloader.  If you are keeping the system you used to install &debian;, just
-add an entry for the &debian; install to your existing grub
-<filename>menu.lst</filename><phrase arch="x86">or <filename>lilo.conf</filename>.  For
+add an entry for the &debian; install to your existing grub2
+<filename>grub.cfg</filename><phrase arch="x86">or <filename>lilo.conf</filename>.  For
 <filename>lilo.conf</filename>, you could also copy it to the new system and
 edit it there. After you are done editing, call <command>lilo</command>
 (remember it will use
@@ -533,22 +533,22 @@ edit it there. After you are done editing, call <command>lilo</command>
 
 </para><para arch="any-x86">
 
-Installing and setting up <classname>grub</classname> is as easy as:
+Installing and setting up <classname>grub2</classname> is as easy as:
 
 <informalexample><screen>
-# aptitude install grub
+# aptitude install grub-pc
 # grub-install /dev/<replaceable>hda</replaceable>
 # update-grub
 </screen></informalexample>
 
-The second command will install <command>grub</command> (in this case in
+The second command will install <command>grub2</command> (in this case in
 the MBR of <literal>hda</literal>). The last command will create a sane
-and working <filename>/boot/grub/menu.lst</filename>.
+and working <filename>/boot/grub/grub.cfg</filename>.
 
 </para><para>
 
 Note that this assumes that a <filename>/dev/hda</filename> device file has
-been created. There are alternative methods to install <command>grub</command>,
+been created. There are alternative methods to install <command>grub2</command>,
 but those are outside the scope of this appendix.
 
 </para><para arch="x86">
