@@ -15,6 +15,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Do not make users think that only "Graphical install" has speakup support,
     and not "64 bit graphical install" too.
   * Mention the 64bit variant installation options.
+  * Update chroot manual into using grub2.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
